POPUG-HW-02 Review: renamed POST /tasks in controller to addTask with related DTO types.
