# task-tracker/src/main/java/org/uber/popug/task/tracker/controller/TaskManagementController.java
@@ -5,8 +5,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.uber.popug.task.tracker.rest.generated.api.TasksCreationApi;
-import org.uber.popug.task.tracker.rest.generated.model.PostTasksRequestDto;
-import org.uber.popug.task.tracker.rest.generated.model.PostTasksResponseDto;
+import org.uber.popug.task.tracker.rest.generated.model.PostAddTaskRequestDto;
+import org.uber.popug.task.tracker.rest.generated.model.PostAddTaskResponseDto;
 import org.uber.popug.task.tracker.service.TaskAddingService;
 
 @RestController
@@ -16,7 +16,7 @@ public class TaskManagementController implements TasksCreationApi {
     private final TaskAddingService taskAddingService;
 
     @Override
-    public ResponseEntity<PostTasksResponseDto> postTasks(PostTasksRequestDto postTasksRequestDto) {
+    public ResponseEntity<PostAddTaskResponseDto> addTask(PostAddTaskRequestDto postTasksRequestDto) {
         return new ResponseEntity<>(taskAddingService.addNewTask(postTasksRequestDto), HttpStatus.CREATED);
     }
 
